// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container Component should match the snapshot 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      {},
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "margin": "auto",
          "padding": 10,
          "width": "100%",
        },
        undefined,
      ]
    }
  />
</View>
`;

exports[`Container Component should match the snapshot with sx styles 1`] = `
<View
  style={
    [
      {
        "width": "100%",
      },
      {},
      undefined,
    ]
  }
>
  <View
    style={
      [
        {
          "backgroundColor": "red",
          "borderRadius": 5,
          "margin": "auto",
          "marginTop": 10,
          "padding": 10,
          "width": "100%",
        },
        undefined,
      ]
    }
  >
    <View />
  </View>
</View>
`;
